{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 43,
  "lineage": "fe6c8ba7-e5d6-744f-8473-d8362e64855c",
  "resources": [
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:345628863367:security-group/sg-0a059ea4132736861",
            "description": "Security group para o EMR master.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a059ea4132736861",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lunch-learn-spark-cluster - EMR-master - DE",
            "name_prefix": "",
            "owner_id": "345628863367",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "EMR_master"
            },
            "timeouts": null,
            "vpc_id": "vpc-3f6d4847"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:345628863367:security-group/sg-0d9fd7e35c23524b2",
            "description": "Security group for EMR worker.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9fd7e35c23524b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lunch-learn-spark-cluster - EMR-worker - DE",
            "name_prefix": "",
            "owner_id": "345628863367",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "EMR_worker"
            },
            "timeouts": null,
            "vpc_id": "vpc-3f6d4847"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}